tests/ui/typeck/type-inference-for-associated-types-69683.stderr
error[E0284]: type annotations needed
  --> $DIR/type-inference-for-associated-types-69683.rs:31:10
   |
LL |     0u16.foo(b);
   |          ^^^
   |
   = note: cannot satisfy `<u8 as Element<_>>::Array == [u8; 3]`
   = note: cannot satisfy `u8: Element<_>`
help: try using a fully qualified path to specify the expected types
   |
LL -     0u16.foo(b);
LL +     <u16 as Foo<I>>::foo(0u16, b);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
